# bike-demand

./: README.md  bike_optuna_mlflow.ipynb  main.py  pyproject.toml
data/: bike.csv
data/processed/: train.csv  valid.csv
mlruns/0/: meta.yaml
mlruns/455374056919817154/: meta.yaml
mlruns/455374056919817154/0021c967952e4e0b809b9d29579d3982/: meta.yaml
mlruns/455374056919817154/004c0c20fad84c9daf59a4f794ae260b/: meta.yaml
mlruns/455374056919817154/00545c52d5a04c5d9d1dbb7a27265b33/: meta.yaml
mlruns/455374056919817154/0061e1c9689b4f81b2b3ac066f046b8d/: meta.yaml
mlruns/455374056919817154/00a0c5ae44b14d86993d09ddd29a22f1/: meta.yaml
mlruns/455374056919817154/00ae6628f92b48dd997e1294434968c9/: meta.yaml
mlruns/455374056919817154/00c462fba86249fcb867f7aef7e5a738/: meta.yaml
mlruns/455374056919817154/013647b53e9d46039fa6f5f3b3ef32d3/: meta.yaml
mlruns/455374056919817154/0137ec64b9d84b358122023e582c572e/: meta.yaml
mlruns/455374056919817154/01580e0ffeb04cbcba1e6151f5fba68d/: meta.yaml
mlruns/455374056919817154/01619e23c35c42c2a844b0ba25f0214b/: meta.yaml
mlruns/455374056919817154/016b4ec36faf4c8e95cfa6c7fc7a11b1/: meta.yaml
mlruns/455374056919817154/018fb956a23a4eca854ee931b7702d2e/: meta.yaml
mlruns/455374056919817154/01b6d909291645faba6f3aa575600ce2/: meta.yaml
mlruns/455374056919817154/0238de067642433d9201d930f7717615/: meta.yaml
mlruns/456193560013194928/: meta.yaml
mlruns/554392990984875473/: meta.yaml
mlruns/710293299470340528/: meta.yaml
notebooks/: bike_mlflow_optuna.ipynb
utils/: eda_utils.py  modeling_utils.py
(+26801 files in other folders)
