[project]
name = "bike-demand"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlflow>=2.20.2",
    "optuna>=4.2.1",
    "seaborn>=0.13.2",
    "xgboost>=2.1.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
